[GOHW-3]: add order parameter for storage.List
